fixing some comments, and warnings in intelliJ.